feat: refactor product and category